don't support primitive type filed